# starvitai

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.agent/: README.md  manifest.sha256
.agent/router/: router_map.yml
.agent/rules/: 00-starvit-authoritative.md  00_starvit_nonnegotiables.md  01_security_terminal_browser.md  02_engineering_standards.md  03_rules_workflows_integrity.md  04_project_scope_scientific_context.md  04_turbo_mode_safety.md  06_router_protocol.md  10_role_backend_platform.md  11_role_frontend_clinician_web.md  12_role_mobile_patient_app.md  13_role_uiux_design_system.md  14_role_devex_build.md  15_role_qa_automation.md  16_role_accessibility_qa.md  17_starvit_frontend_stack_web.md  18_starvit_design_system_web.md  19_starvit_api_contracts_openapi.md  20_role_frontend_research_workbench_web.md  20_role_security.md  21_role_privacy_compliance.md  21_starvit_frontend_stack_mobile.md  22_role_iam_audit.md  23_role_supply_chain_security.md  24_role_prompt_injection_red_team.md  25_starvit_backend_stack_fastapi.md  26_starvit_backend_cloud_run_deployment.md  27_starvit_backend_gcp_identity_secrets.md  28_starvit_backend_async_pubsub_workflows.md  29_starvit_backend_security_authz.md  30_role_sre.md  31_role_observability.md  32_role_release_change_manager.md  33_role_finops_cost_engineering.md  34_role_incident_commander.md  40_role_data_engineering.md  41_role_graph_engineering.md  42_role_data_quality.md  43_role_data_governance_steward.md  (+36 more)
.agent/tools/: gen_manifest.sh  (+1 more)
.github/: dependabot.yml
docs/: AGENTS.md  AGENT_PLATFORMS.md  ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT_OPERATING_MODEL.md  ROUTER.md  environments.md  remote-dev-backends.md  routing.md
scripts/: validate.sh
services/api/: .env.example  Dockerfile  package.json  pyproject.toml
services/api/app/: adapters.py  main.py
services/api/app/clients/: medplum.py  tigergraph.py
services/api/app/core/: config.py  security.py
services/api/app/modules/phi_gateway/: fhir_writer.py
services/api/tests/: test_live_mode.py
(+174 files in other folders)
