[tool.poetry]
name = "starvit-api"
version = "0.1.0"
description = "Starvit Backend API"
authors = ["Admin <admin@starvit.ca>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.125.0"
uvicorn = "^0.38.0"
httpx = "^0.28.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
