[project]
name = "starvit-api"
version = "0.1.0"
description = "Starvit Backend API"
authors = [
    {name = "Admin", email = "admin@starvit.ca"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0,<0.126.0",
    "uvicorn>=0.38.0,<0.39.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "pyjwt[crypto]>=2.10.1,<3.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
